welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:21: error: ':' expected but ')' found.
def peindre(motif){
                 ^Array1:30: error: identifier expected but '}' found.
}
^